// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateAlarm Screen test CreateAlarm screen matches snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": undefined,
        "flex": 1,
        "justifyContent": "center",
      },
      Object {
        "justifyContent": "space-between",
        "padding": 48,
      },
    ]
  }
>
  <CloseIcon
    onPress={[Function]}
    style={
      Object {
        "marginLeft": -20,
        "marginTop": 27,
      }
    }
  />
  <Text
    style={
      Array [
        Object {
          "color": "#DDDDDD",
          "fontSize": 30,
          "fontWeight": "bold",
        },
        Object {
          "color": "#E4F96A",
          "marginBottom": 48,
          "marginTop": 40,
        },
      ]
    }
  >
    New Alarm:
  </Text>
  <Text
    style={
      Object {
        "color": "#DDDDDD",
        "fontSize": 14,
        "fontWeight": "200",
      }
    }
  >
    Destination
  </Text>
  <Autocomplete
    autoCompleteValue=""
    onDestChange={[Function]}
  />
  <Text
    style={
      Array [
        Object {
          "color": "#DDDDDD",
          "fontSize": 14,
          "fontWeight": "200",
        },
      ]
    }
  >
    Routine Time
  </Text>
  <TextInput
    keyboardType="numeric"
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="(30 min)"
    placeholderTextColor="#505050"
    returnKeyType="next"
    style={
      Object {
        "borderBottomColor": "#E4F96A",
        "borderBottomWidth": 2,
        "color": "#DDDDDD",
        "fontSize": 18,
        "height": 50,
        "marginBottom": 24,
      }
    }
  />
  <Text
    style={
      Object {
        "color": "#DDDDDD",
        "fontSize": 14,
        "fontWeight": "200",
      }
    }
  >
    Arrival Time
  </Text>
  <TextInput
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="(8:00 AM)"
    placeholderTextColor="#505050"
    returnKeyType="next"
    style={
      Object {
        "borderBottomColor": "#E4F96A",
        "borderBottomWidth": 2,
        "color": "#DDDDDD",
        "fontSize": 18,
        "height": 50,
        "marginBottom": 24,
      }
    }
  />
  <Text
    style={
      Object {
        "color": "#DDDDDD",
        "fontSize": 14,
        "fontWeight": "200",
      }
    }
  >
    Recurring (beta)
  </Text>
  <DayPicker
    days={
      Object {
        "fri": false,
        "mon": false,
        "sat": false,
        "sun": false,
        "thu": false,
        "tue": false,
        "wed": false,
      }
    }
    onChangeDay={[Function]}
  />
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <Buttons
      backgroundColor="#E4F96A"
      onPress={[Function]}
      textColor="#13151A"
      title="Save Alarm"
    />
  </View>
</View>
`;

exports[`CreateAlarm Screen test CreateAlarm screen matches snapshot after state set 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": undefined,
        "flex": 1,
        "justifyContent": "center",
      },
      Object {
        "justifyContent": "space-between",
        "padding": 48,
      },
    ]
  }
>
  <CloseIcon
    onPress={[Function]}
    style={
      Object {
        "marginLeft": -20,
        "marginTop": 27,
      }
    }
  />
  <Text
    style={
      Array [
        Object {
          "color": "#DDDDDD",
          "fontSize": 30,
          "fontWeight": "bold",
        },
        Object {
          "color": "#E4F96A",
          "marginBottom": 48,
          "marginTop": 40,
        },
      ]
    }
  >
    New Alarm:
  </Text>
  <Text
    style={
      Object {
        "color": "#DDDDDD",
        "fontSize": 14,
        "fontWeight": "200",
      }
    }
  >
    Destination
  </Text>
  <Autocomplete
    autoCompleteValue="Middleton, WI"
    onDestChange={[Function]}
  />
  <Text
    style={
      Array [
        Object {
          "color": "#DDDDDD",
          "fontSize": 14,
          "fontWeight": "200",
        },
      ]
    }
  >
    Routine Time
  </Text>
  <TextInput
    keyboardType="numeric"
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="(30 min)"
    placeholderTextColor="#505050"
    returnKeyType="next"
    style={
      Object {
        "borderBottomColor": "#E4F96A",
        "borderBottomWidth": 2,
        "color": "#DDDDDD",
        "fontSize": 18,
        "height": 50,
        "marginBottom": 24,
      }
    }
    value="30"
  />
  <Text
    style={
      Object {
        "color": "#DDDDDD",
        "fontSize": 14,
        "fontWeight": "200",
      }
    }
  >
    Arrival Time
  </Text>
  <TextInput
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="(8:00 AM)"
    placeholderTextColor="#505050"
    returnKeyType="next"
    style={
      Object {
        "borderBottomColor": "#E4F96A",
        "borderBottomWidth": 2,
        "color": "#DDDDDD",
        "fontSize": 18,
        "height": 50,
        "marginBottom": 24,
      }
    }
    value="8:05 PM"
  />
  <Text
    style={
      Object {
        "color": "#DDDDDD",
        "fontSize": 14,
        "fontWeight": "200",
      }
    }
  >
    Recurring (beta)
  </Text>
  <DayPicker
    days={
      Object {
        "fri": false,
        "mon": false,
        "sat": false,
        "sun": false,
        "thu": false,
        "tue": false,
        "wed": false,
      }
    }
    onChangeDay={[Function]}
  />
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <Buttons
      backgroundColor="#E4F96A"
      onPress={[Function]}
      textColor="#13151A"
      title="Save Alarm"
    />
  </View>
</View>
`;
